--- a/web/templates/producto.html
+++ b/web/templates/producto.html
@@ -71,7 +71,7 @@
                 <p class="prod-excerpt">{{producuto.descripcion}}... 
                     <a id="prod-showdesc" class="prod-excerpt-more" href="#">read more</a></p>
                 <div class="prod-add">
-                    <form action="#" method="post">
+                    <form action="{% url 'web:agregarCarrito' producuto.id %}" method="post">
                         {% csrf_token %}
                         <div class="variations">
                             <div class="variations-row">
