--- a/web/templates/includes/navbar.html
+++ b/web/templates/includes/navbar.html
@@ -5,8 +5,8 @@
             <ul class="links_list links_list-align-left align-center-desktop topbar-social">
                 <li>
                     <p class="links_list-value">
-                        <a href="http://facebook.com" target="_blank" rel="nofollow">
-                            <i class="fa fa-facebook"></i>
+                        <a href="{% url 'web:Sucursal' %}" target="_blank" rel="nofollow">
+                            Sucursales
                         </a>
                     </p>
                 </li>
